--- a/src/App.css
+++ b/src/App.css
@@ -437,32 +437,77 @@
 /* ================ Work page ================ */
 /* =========================================== */
 
-.work-container{
+.work-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 25vh;
 }
 
-.work-container .work-title{
+.work-container .work-title {
     text-align: center;
 }
 
-.work-container .work-title h1{
+.work-container .work-title h1 {
     color: rgba(0, 0, 0, 0.4);
     font-size: 2rem;
 }
 
-.work-container .work-title span{
+.work-container .work-title span {
     color: rgba(0, 0, 0, 0.65);
 }
 
-.work-container .work-title p{
+.work-container .work-title p {
     color: rgba(0, 0, 0, 0.65);
 }
 
-.work-card{
-    height: 250px;
-    width: 350px;
-    background-color: red;
+.work-card {
+    height: 320px;
+    width: 400px;
+    background-color: rgba(245, 245, 245, 0.434);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: .3s ease-in-out; 
+}
+
+.work-card:hover{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    transform: scale(1.01);
+    transition: .3s ease-in-out;
+}
+
+.work-card .work-card-img{
+    padding: 2rem;
+}
+
+.work-card img {
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+}
+
+.work-card .work-card-info {
+    background-color: white;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 2rem;
+    gap: .5rem;
+}
+
+.work-card .work-card-info span {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.771);
+}
+
+.work-card .work-card-info a {
+    color: var(--secondary-color);
+}
+
+.cards-container{
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: repeat(3 , 1fr);
+    margin-top: 4rem;
 }
