--- a/src/App.css
+++ b/src/App.css
@@ -467,16 +467,16 @@
     width: 400px;
     background-color: rgba(245, 245, 245, 0.434);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: .3s ease-in-out; 
+    transition: .3s ease-in-out;
 }
 
-.work-card:hover{
+.work-card:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     transform: scale(1.01);
     transition: .3s ease-in-out;
 }
 
-.work-card .work-card-img{
+.work-card .work-card-img {
     padding: 2rem;
 }
 
@@ -506,9 +506,278 @@
     color: var(--secondary-color);
 }
 
-.cards-container{
+.cards-container {
     display: grid;
     gap: 4rem;
-    grid-template-columns: repeat(3 , 1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin-top: 4rem;
+}
+
+
+/* =========================================== */
+/* ================ Workdeatails page ================ */
+/* =========================================== */
+
+/* landing section */
+.WorkDetail {
+    background-color: rgba(21, 21, 21, 0.985);
+    position: relative;
+}
+
+.WorkDetail .work-container {
+    position: relative;
+    height: 75vh;
+}
+
+.WorkDetail .work-container .work-title {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.WorkDetail .work-container .work-title span {
+    color: white;
+}
+
+.WorkDetail .work-container .work-title h1 {
+    font-size: 4rem;
+    letter-spacing: 2px;
+}
+
+.WorkDetail .work-container .work-title h3 {
+    font-weight: normal;
+}
+
+.WorkDetail .workdetail-cta .workdetail-btn {
+    position: absolute;
+    top: 90%;
+}
+
+.WorkDetail .workdetail-cta .workdetail-btn:nth-child(1) {
+    left: 10%;
+}
+
+.WorkDetail .workdetail-cta .workdetail-btn:nth-child(2) {
+    right: 8%;
+}
+
+.workdetail-slider {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.WorkDetail .workdetail-img {
+    position: absolute;
+    left: 41%;
+    width: 350px;
+    height: 150px;
+    border-radius: 100px;
+    top: 900px;
+    transition: .5s ease-in-out;
+}
+
+.workdetail-img-container {
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.WorkDetail .workdetail-img img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.workdetail-img-layer {
+    background-color: var(--primary-color);
+    position: absolute;
+    height: 100%;
+    width: 0px;
+    right: -15%;
+    animation: bgimganimation 2.5s cubic-bezier(0.23, 1, 0.320, 1) 2s;
+}
+
+.workdetail-img-layer2 {
+    background-color: var(--primary-color);
+    position: absolute;
+    height: 100%;
+    width: 0px;
+    right: -15%;
+    animation: bgimganimation 2.5s cubic-bezier(0.23, 1, 0.320, 1) 6s;
+}
+
+@keyframes bgimganimation {
+    0% {
+        right: -15%;
+        width: 0%;
+    }
+
+    50% {
+        right: 0%;
+        width: 100%;
+    }
+
+    100% {
+        right: 100%;
+        width: 0%;
+    }
+}
+
+.workdetail-btn {
+    color: white;
+    background: transparent;
+    padding: 1rem 3rem;
+    border: 1px solid white;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    transition: 1s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.workdetail-btn:hover {
+    cursor: pointer;
+    color: var(--primary-color);
+    border-color: var(--primary-color);
+    transition: 1s cubic-bezier(0.23, 1, 0.320, 1);
+    transform: scale(1.01);
+}
+
+.workdetail-bottom-title,
+.WorkFeature,
+.other-projects {
+    width: 85%;
+    margin: 15rem auto 0 auto;
+    font-size: 10rem;
+    font-weight: 800;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.workdetail-bottom-title .blend-wrapper {
+    display: flex;
+    flex-direction: column;
+    line-height: 9.5rem;
+    color: rgba(128, 128, 128, 0.327);
+    overflow: hidden;
+}
+
+.workdetail-bottom-descpription {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.workdetail-bottom-descpription p {
+    font-size: 2rem;
+    color: white;
+    font-weight: 600;
+}
+
+/* features section */
+
+.WorkFeature {
+    font-size: 5rem;
+    font-weight: 700;
+    color: white;
+    height: 90vh;
+    flex-direction: row;
+    align-items: center;
+    gap: 4rem;
+}
+
+.WorkFeaturereverse {
+    flex-direction: row-reverse;
+}
+
+.WorkFeaturereverse .left-WorkFeature {
+    text-align: right;
+}
+
+.WorkFeature p {
+    margin: 0;
+    font-weight: 500;
+    font-size: 2rem;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.left-WorkFeature {
+    width: 35%;
+}
+
+.right-WorkFeature {
+    width: 65%;
+}
+
+.right-WorkFeature img {
+    width: 100%;
+    object-fit: cover;
+}
+
+
+/* other projects section */
+.other-projects {
+    overflow: hidden;
+}
+
+.other-projects img {
+    border-radius: 30px;
+    width: 100%;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.other-projects img:hover {
+}
+
+.other-projects-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 5rem;
+    border-radius: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.other-projects-img-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    overflow: hidden;
+}
+
+.other-projects-title {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    z-index: 1;
+    display: none;
+}
+
+.other-projects-title span {
+    font-size: 2rem;
+    max-width: 350px;
+    text-align: center;
+    color: var(--primary-color);
+}
+
+.other-projects-title img {
+    width: 120px;
+}
+
+.current-work {
+    border: 2px solid var(--primary-color);
 }
