--- a/src/components/header.css
+++ b/src/components/header.css
@@ -16,11 +16,10 @@ header {
 }
 
 .header-blur {
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(0, 0, 0, .25);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 header h1 {
