--- a/src/App.css
+++ b/src/App.css
@@ -442,6 +442,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 25vh;
+    position: relative;
 }
 
 .work-container .work-title {
@@ -522,6 +523,7 @@
 .WorkDetail {
     background-color: rgba(21, 21, 21, 0.985);
     position: relative;
+    overflow: hidden;
 }
 
 .WorkDetail .work-container {
@@ -572,7 +574,6 @@
 
 .WorkDetail .workdetail-img {
     position: absolute;
-    left: 41%;
     width: 350px;
     height: 150px;
     border-radius: 100px;
@@ -687,7 +688,6 @@
     font-size: 5rem;
     font-weight: 700;
     color: white;
-    height: 90vh;
     flex-direction: row;
     align-items: center;
     gap: 4rem;
@@ -719,12 +719,12 @@
 .right-WorkFeature img {
     width: 100%;
     object-fit: cover;
+    border-radius: 25px;
 }
 
 
 /* other projects section */
 .other-projects {
-    overflow: hidden;
 }
 
 .other-projects img {
@@ -744,14 +744,12 @@
     gap: 5rem;
     border-radius: 30px;
     position: relative;
-    overflow: hidden;
 }
 
 .other-projects-img-container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    overflow: hidden;
 }
 
 .other-projects-title {
@@ -764,18 +762,17 @@
     align-items: center;
     gap: 1rem;
     z-index: 1;
-    display: none;
 }
 
 .other-projects-title span {
-    font-size: 2rem;
+    font-size: 1.8rem;
     max-width: 350px;
     text-align: center;
     color: var(--primary-color);
 }
 
 .other-projects-title img {
-    width: 120px;
+    width: 100px;
 }
 
 .current-work {
