--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@
     width: 500px;
     border: 3px solid white;
     top: 40px;
-    right: -40px;
+    right: -10px;
     z-index: -2;
 }
 
@@ -405,21 +405,22 @@
 }
 
 .nav-dot {
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     transform: rotate(45deg);
     background-color: var(--secondary-color);
     cursor: pointer;
-    transition: .3s cubic-bezier(0.55, 0.06, 0.68, 0.19);
+    transition: .3s ease-in-out;
+    border: 2px solid var(--secondary-color);
 }
 
 .nav-dot.active {
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     rotate: -45deg;
     background-color: transparent;
-    border: 3px solid var(--secondary-color);
-    transition: .3s cubic-bezier(0.55, 0.06, 0.68, 0.19);
+    border: 2px solid var(--secondary-color);
+    transition: .3s ease-in-out;
 }
 
 .color-green {
@@ -531,12 +532,25 @@
     height: 75vh;
 }
 
+.workdetail-particle1 {
+    position: absolute;
+    left: 60%;
+    top: 47%;
+}
+
+.workdetail-particle2 {
+    position: absolute;
+    right: 60%;
+    top: 30%;
+}
+
 .WorkDetail .work-container .work-title {
     text-align: center;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
 }
 
 .WorkDetail .work-container .work-title span {
@@ -544,8 +558,9 @@
 }
 
 .WorkDetail .work-container .work-title h1 {
-    font-size: 4rem;
-    letter-spacing: 2px;
+    font-size: 5rem;
+    letter-spacing: 5px;
+    margin: 0;
 }
 
 .WorkDetail .work-container .work-title h3 {
@@ -570,6 +585,7 @@
     height: 50%;
     display: flex;
     justify-content: center;
+    align-items: end;
 }
 
 .WorkDetail .workdetail-img {
@@ -577,8 +593,8 @@
     width: 350px;
     height: 150px;
     border-radius: 100px;
-    top: 900px;
     transition: .5s ease-in-out;
+    margin-bottom: 1rem;
 }
 
 .workdetail-img-container {
@@ -653,7 +669,7 @@
 .WorkFeature,
 .other-projects {
     width: 85%;
-    margin: 15rem auto 0 auto;
+    margin: 10rem auto 0 auto;
     font-size: 10rem;
     font-weight: 800;
     display: flex;
@@ -724,8 +740,7 @@
 
 
 /* other projects section */
-.other-projects {
-}
+.other-projects {}
 
 .other-projects img {
     border-radius: 30px;
@@ -734,8 +749,7 @@
     cursor: pointer;
 }
 
-.other-projects img:hover {
-}
+.other-projects img:hover {}
 
 .other-projects-container {
     width: 100%;
