--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
 * {
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -19,12 +20,12 @@ body {
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
-
 }
 
 .home section {
-    height: 100vh;
     scroll-snap-align: start;
+    height: 100vh;
+    width: 100%;
 }
 
 ::selection {
@@ -34,4 +35,10 @@ body {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+@media (max-height:700px) and (max-width:1000px) {
+    .home section {
+        height: 130vh;
+    }
 }
