--- a/src/App.css
+++ b/src/App.css
@@ -613,11 +613,22 @@
 
 .work-container .work-title {
     text-align: center;
+    margin-top: 3rem;
 }
 
-.work-container .work-title h1 {
+.work-container .work-title .work-title-div {
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+}
+
+.work-container .work-title .work-title-div h1 {
     color: rgba(0, 0, 0, 0.4);
     font-size: 2rem;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .work-container .work-title span {
@@ -722,10 +733,22 @@
     color: white;
 }
 
+.WorkDetail .work-container .work-title div {
+    overflow: hidden;
+    position: relative;
+    height: 100px;
+    width: 710px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .WorkDetail .work-container .work-title h1 {
     font-size: 5rem;
     letter-spacing: 5px;
     margin: 0;
+    position: absolute;
+    text-align: center;
 }
 
 .WorkDetail .work-container .work-title h3 {
@@ -846,9 +869,32 @@
     display: flex;
     flex-direction: column;
     line-height: 9.5rem;
-    color: rgba(128, 128, 128, 0.327);
     overflow: hidden;
+    position: relative;
 }
+
+.workdetail-bottom-title .blend-wrapper span {
+    color: transparent;
+    color: rgb(76, 76, 76);
+    position: relative;
+}
+
+#blend-text{
+    position: relative;
+}
+
+.before-project{
+    content: 'Project';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    overflow: hidden;
+    height: 115%;
+    color: white;
+    z-index: 9;
+}
+
 
 .workdetail-bottom-descpription {
     width: 100%;
