--- a/src/App.css
+++ b/src/App.css
@@ -656,12 +656,23 @@
 
 .work-card .work-card-img {
     padding: 2rem;
+    position: relative;
 }
 
 .work-card img {
     width: 100%;
     height: 150px;
     object-fit: contain;
+}
+
+.work-card .stack{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    padding: .2rem .8rem;
+    border-radius: 30px;
 }
 
 .work-card .work-card-info {
