--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,8 @@
 
 .handsome {
     position: relative;
-    width: 500px;
-    height: 470px;
+    width: 430px;
+    height: 400px;
 }
 
 .handsome .handsome-img {
@@ -117,6 +117,7 @@
     position: absolute;
     top: 0;
     object-fit: cover;
+    border-radius: 2px;
 }
 
 .handsome::after {
