--- a/src/App.css
+++ b/src/App.css
@@ -666,7 +666,7 @@
     object-fit: contain;
 }
 
-.work-card .stack{
+.work-card .stack {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -926,6 +926,7 @@
     color: white;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     gap: 4rem;
 }
 
@@ -948,10 +949,6 @@
     width: 35%;
 }
 
-.right-WorkFeature {
-    width: 65%;
-}
-
 .right-WorkFeature img,
 .right-WorkFeature video {
     width: 100%;
@@ -962,12 +959,17 @@
 
 
 /* other projects section */
+.other-projects .other-projects-img-container a {
+    z-index: 2;
+}
 
-.other-projects img {
+.other-projects .other-projects-img-container img {
     border-radius: 30px;
     width: 100%;
-    z-index: 2;
+    height: 400px;
+    z-index: 9999;
     cursor: pointer;
+    object-fit: cover;
     transition: .3s ease-in-out;
 }
 
@@ -977,7 +979,7 @@
     transition: .3s ease-in-out;
 }
 
-.other-projects-img-container img:hover {
+.other-projects .other-projects-img-container img:hover {
     border: 1px solid var(--primary-color);
     border-radius: 30px;
     transition: .3s ease-in-out;
@@ -986,7 +988,7 @@
 .other-projects-container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 5rem;
     border-radius: 30px;
     position: relative;
@@ -1007,7 +1009,6 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    z-index: 1;
 }
 
 .other-projects-title span {
